<resources>
    <string name="app_name">Makan Sehat</string>
    <string name="app_save">Simpan</string>
    <string name="app_mode">Mode</string>
    <string name="food_recent_text">Jenis Makanan</string>
    <string name="food_recent_carbohidrat">0 kkal</string>
    <string name="food_detail_text">Gizi</string>
    <string name="food_title">Title Food</string>
    <string name="food_description">Description Food | Description Food</string>
    <string name="food_descriptionw">Berat</string>
    <string name="food_descriptionc">Karbohidrat</string>
    <string name="food_descriptiont">:</string>
    <string name="food_weight">Weight Food</string>
    <string name="food_carbohidrat">Carbohidrat Food</string>
</resources>