<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="10dp"
    android:backgroundTint="@color/green_11"
    app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="15dp">
        <ImageView
            android:id="@+id/iv_foodImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/food_buah"
            tools:ignore="ContentDescription"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_foodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/food_title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_descriptionw"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/food_descriptiont"/>
                <TextView
                    android:id="@+id/tv_foodWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_weight"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_descriptionc"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/food_descriptiont"/>
                <TextView
                    android:id="@+id/tv_foodCarbohidrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_carbohidrat"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>