<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_11"
    android:padding="20dp"
    tools:context=".DetailActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_foodImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_serealia"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"/>
            <TextView
                android:id="@+id/tv_foodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/food_title"
                app:layout_constraintTop_toBottomOf="@id/iv_foodImage"/>
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:backgroundTint="@color/green_11"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_foodTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tv_foodDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/food_description"
                app:layout_constraintTop_toBottomOf="@id/tv_foodTitle"/>
            <TextView
                android:id="@+id/tv_foodTitle_nutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/food_detail_text"
                app:layout_constraintTop_toBottomOf="@id/tv_foodDescription"/>
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:backgroundTint="@color/green_11"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_foodTitle_nutrition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/tv_foodTitle_nutrition">
                <ImageView
                    android:id="@+id/biv_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:src="@drawable/minus_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription"/>
                <TextView
                    android:id="@+id/tv_foodWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_weight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ImageView
                    android:id="@+id/biv_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/plus_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="ContentDescription"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tv_foodCarbohidrat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/food_carbohidrat"
                app:layout_constraintTop_toBottomOf="@id/cl_weight"/>
            <Button
                android:id="@+id/bv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_save"
                app:layout_constraintTop_toBottomOf="@id/tv_foodCarbohidrat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>